# drcsim

./: .hgignore  CMakeLists.txt  CMakeLists.txt.ros.old  README.md  drcsim.files  drcsim.includes  grasp.bash  spawn_atlas.notes  walk.bash
atlas_description/: CMakeLists.txt  package.xml
atlas_description/gazebo/: database.config
atlas_description/ihmc/: atlas_v5.urdf.xacro  atlas_v5_robotiq_hands.urdf.xacro
atlas_description/meshes_unplugged/: l_clav.dae  l_farm.dae  l_larm.dae  l_scap.dae  l_talus.dae  l_uleg.dae  ltorso.dae  r_clav.dae  r_foot.dae  r_larm.dae  r_uarm.dae  r_uleg.dae
atlas_description/meshes_v3/: head.DAE  head_camera.DAE  l_clav.DAE  l_elbow_rx.DAE  l_elbow_ry.DAE  l_farm.DAE  l_foot.DAE  l_hand.DAE  l_lglut.DAE  l_lleg.DAE  l_lleg.stl  l_sh_rx.DAE  l_talus.DAE  l_uglut.DAE  l_uleg.DAE  l_uleg.stl  ltorso.DAE  mtorso.DAE  pelvis.DAE  pelvis.stl  r_clav.DAE  r_elbow_rx.DAE  r_elbow_ry.DAE  r_farm.DAE  r_foot.DAE  r_hand.DAE  r_lglut.DAE  r_lglut.stl  r_lleg.DAE  r_lleg.stl  r_sh_rx.DAE  r_talus.DAE  r_uglut.DAE  r_uglut.stl  r_uleg.DAE  r_uleg.stl  utorso.DAE  utorso_mod.DAE  utorso_pack.DAE
atlas_description/meshes_v4/: head.dae
atlas_description/meshes_v5/: head.dae  l_foot.dae  l_hand.dae  l_lglut.dae  l_lleg.dae  l_uarm.dae  l_uglut.dae  mtorso.dae  pelvis.dae  r_farm.dae  r_hand.dae  r_lglut.dae  r_lleg.dae  r_scap.dae  r_talus.dae  r_uglut.dae  utorso.dae
atlas_description/raw/: drc_skeleton_v2_modv3.cfg  drc_skeleton_v3_20130823.cfg  drc_skeleton_v3_mod1.cfg  drc_skeleton_v4.cfg  drc_skeleton_v5.cfg  notes
atlas_description/robots/: CMakeLists.txt  atlas.urdf.xacro  atlas3_sandia_hands.urdf.xacro  atlas_cpu_lidar.urdf.xacro  atlas_harnessed.urdf.xacro  atlas_irobot_hands.urdf.xacro  atlas_original_inertia.urdf.xacro  atlas_robotiq_hands.urdf.xacro  atlas_sandia_hands.urdf.xacro  atlas_sandia_hands_cpu_lidar.urdf.xacro  atlas_sandia_hands_original_inertia.urdf.xacro  atlas_sandia_hands_stumps.urdf.xacro  atlas_sandia_hands_stumps_cpu_lidar.urdf.xacro  atlas_v3.urdf.xacro  atlas_v3_irobot_hands.urdf.xacro  atlas_v3_robotiq_hands.urdf.xacro  atlas_v3_sandia_hands.urdf.xacro  atlas_v3_with_v1_inertia.urdf.xacro  atlas_v3_with_v1_inertia_irobot_hands.urdf.xacro  atlas_v3_with_v1_inertia_sandia_hands.urdf.xacro  atlas_v4.urdf.xacro  atlas_v4_irobot_hands.urdf.xacro  atlas_v4_no_wry2.urdf.xacro  atlas_v4_robotiq_hands.urdf.xacro  atlas_v4_sandia_hands.urdf.xacro  atlas_v5.urdf.xacro  atlas_v5_irobot_hands.urdf.xacro  atlas_v5_robotiq_hands.urdf.xacro  atlas_v5_sandia_hands.urdf.xacro
atlas_description/urdf/: atlas.gazebo  atlas.urdf  atlas_harnessed.gazebo  atlas_original_inertia.urdf  atlas_simple_shapes.urdf  atlas_simple_shapes_original_inertia.urdf  atlas_v3.gazebo  atlas_v3.transmission  atlas_v3.urdf  atlas_v3_simple_shapes.urdf  atlas_v3_with_v1_inertia.urdf  atlas_v4.gazebo  atlas_v4.urdf  atlas_v4_no_wry2.gazebo  atlas_v4_no_wry2.transmission  atlas_v4_no_wry2_simple_shapes.urdf  atlas_v4_raw.urdf  atlas_v4_simple_shapes.urdf  atlas_v5.gazebo  atlas_v5.urdf  atlas_v5_simple_shapes.urdf
atlas_msgs/: CMakeLists.txt  MultiCameraPlugin.cc  MultiSenseSLPlugin.cpp  gazebo_ros_api_plugin.cpp  gazebo_ros_bumper.h  gazebo_ros_camera_utils.cpp  package.xml
atlas_msgs/msg/: AtlasBehaviorPelvisServoParams.msg  AtlasSimInterfaceCommand.msg  SModelRobotInput.msg  SModelRobotOutput.msg  SimulationState.msg
doc/: CMakeLists.txt  mainpage.html
drcsim_gazebo/: CMakeLists.txt  package.xml
drcsim_gazebo/config/: arm_controllers_v3.yaml  leg_controllers.yaml  leg_controllers_v3.yaml  leg_torso_position_controllers_v3.yaml  position_controllers_v3.yaml  whole_body_trajectory_controller_v3.yaml  whole_body_trajectory_controller_v4.yaml  whole_body_trajectory_controller_v5.yaml
drcsim_gazebo/launch/: atlas.launch  atlas3_sandia_hands.launch  atlas_arm_controllers.launch  atlas_arm_slider_teleop.launch  atlas_bringup.launch  atlas_cpu_lidar.launch  atlas_drc_vehicle_fire_hose.launch  atlas_golf_cart_fire_hose.launch  atlas_harnessed.launch  atlas_irobot_hands.launch  atlas_irobot_hands_bringup.launch  atlas_irobot_hands_state_publishers.launch  atlas_no_controllers.launch  atlas_position_controllers.launch  atlas_robotiq_hands.launch  (+64 more)
drcsim_gazebo_plugins/: CMakeLists.txt  DRCBuildingPlugin.cc  DRCFirehosePlugin.cc  DRCVehiclePlugin.cc  package.xml
drcsim_gazebo_ros_plugins/: CMakeLists.txt  package.xml
drcsim_model_resources/: CMakeLists.txt  package.xml
drcsim_tutorials/: CMakeLists.txt
handle_msgs/: CMakeLists.txt  package.xml
irobot_hand_description/: CMakeLists.txt  manifest.xml  model.config  package.xml
models/: CMakeLists.txt  drc_robot.model  firehose.model  hose.model  low_poly_golf_cart.model  low_poly_golf_cart_test.model  manifest.xml
plugins/: CMakeLists.txt  DRCBuildingPlugin.cc  DRCBuildingPlugin.hh  DRCFirehosePlugin.cc  DRCFirehosePlugin.hh  DRCRobotPlugin.cc  DRCRobotPlugin.hh  DRCVehiclePlugin.cc  DRCVehiclePlugin.hh  RubblePlugin.cc  RubblePlugin.hh
ros/: CMakeLists.txt  setup.bash
vrc_arenas/: CMakeLists.txt
worlds/: CMakeLists.txt  atlas.world  atlas_AtlasSimInterface.world  atlas_cpu_lidar.world  atlas_drc_vehicle_fire_hose.world  atlas_golf_cart_fire_hose.world  atlas_irobot_hand.world  atlas_irobot_hands.world  atlas_sandia_hands.world  atlas_sandia_hands_fixed.world  atlas_sandia_hands_stumps.world  atlas_v3.world  atlas_v3_sandia_hands.world  atlas_v3_with_v1_inertia.world  atlas_v3_with_v1_inertia_sandia_hands.world  drc_practice_task_1.world  drc_practice_task_2.world  drc_practice_task_3.world  drc_practice_task_4.world  drc_practice_task_5.world  drc_practice_task_7.world  drc_robot.world  drc_robot_golf_cart.world  drc_robot_golf_cart_fire_hose.world  drc_robot_irobot_hand.world  drc_robot_sandia_hand.world  drc_sim_v0.world  drc_vehicle.world  fire_hose.world  golf_cart.world  powerplant.world  qual_task_1.world  qual_task_1_stumps.world  qual_task_2.world  qual_task_3.world  qual_task_4.world  vrc_task_1.world  vrc_task_2.world  vrc_task_2_cpu_lidar.world  vrc_task_2_mud_start.world  (+5 more)
(+2242 files in other folders)
