<?xml version="1.0"?>
<package>
  <name>atlas_utils</name>
  <version>2.8.0</version>
  <description>The atlas_utils package</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/DRC</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas_gazebo_plugins</build_depend>
  <build_depend>atlas_description</build_depend>
  <build_depend>atlas_msgs</build_depend>
  <build_depend>drcsim_gazebo_plugins</build_depend>
  <build_depend>drcsim_model_resources</build_depend>
  <build_depend>irobot_hand_description</build_depend>
  <build_depend>multisense_sl_description</build_depend>
  <build_depend>sandia_hand_description</build_depend>
  <run_depend>atlas_gazebo_plugins</run_depend>
  <run_depend>atlas_description</run_depend>
  <run_depend>atlas_msgs</run_depend>
  <run_depend>drcsim_gazebo_plugins</run_depend>
  <run_depend>drcsim_model_resources</run_depend>
  <run_depend>irobot_hand_description</run_depend>
  <run_depend>multisense_sl_description</run_depend>
  <run_depend>sandia_hand_description</run_depend>
</package>
