<?xml version="1.0"?>
<package>
  <name>drcsim_gazebo</name>
  <version>3.1.0</version>
  <description>DRC simulator Gazebo simulation</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/DRC</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas_msgs</build_depend>
  <build_depend>drcsim_gazebo_plugins</build_depend>
  <build_depend>drcsim_gazebo_ros_plugins</build_depend>
  <build_depend>drcsim_model_resources</build_depend>
  <build_depend>atlas_description</build_depend>
  <build_depend>irobot_hand_description</build_depend>
  <build_depend>multisense_sl_description</build_depend>
  <build_depend>sandia_hand_description</build_depend>
  <run_depend>atlas_description</run_depend>
  <run_depend>atlas_msgs</run_depend>
  <run_depend>drcsim_gazebo_plugins</run_depend>
  <run_depend>drcsim_gazebo_ros_plugins</run_depend>
  <run_depend>drcsim_model_resources</run_depend>
  <run_depend>irobot_hand_description</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>multisense_sl_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sandia_hand_description</run_depend>
  <run_depend>stereo_image_proc</run_depend>
</package>
